--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -7,6 +7,128 @@
     >
 
 
+    <LinearLayout
+        android:layout_width="362dp"
+        android:layout_height="54dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="384dp"
+        android:background="@drawable/white_background"
+        android:clickable="true"
+        android:focusable="auto"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/doctor_icon"
+            android:layout_width="30dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="-2dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_doctor_icon" />
+
+        <TextView
+            android:id="@+id/doctor_text"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="Doctor"
+            android:textAlignment="center"
+            android:textColor="#515C6F"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/doctor_text2"
+            android:layout_width="148dp"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="Doctor"
+            android:textAlignment="textEnd"
+            android:textColor="#66515C6F"
+            android:textSize="15sp" />
+
+        <ImageView
+            android:id="@+id/go_to2"
+            android:layout_width="30dp"
+            android:layout_height="33dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_go_to" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="362dp"
+        android:layout_height="54dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="451dp"
+        android:background="@drawable/white_background"
+        android:clickable="true"
+        android:focusable="auto"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/language_icon"
+            android:layout_width="30dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="-2dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_language_icon" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="Language"
+            android:textAlignment="center"
+            android:textColor="#515C6F"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="117dp"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="Language"
+            android:textAlignment="textEnd"
+            android:textColor="#66515C6F"
+            android:textSize="15sp" />
+
+        <ImageView
+            android:id="@+id/go_to3"
+            android:layout_width="30dp"
+            android:layout_height="33dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_go_to" />
+
+    </LinearLayout>
+
     <View
         android:id="@+id/white_bg"
         android:layout_width="match_parent"
@@ -101,27 +223,63 @@
         app:srcCompat="@drawable/ic_blank_profile_pic" />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="102dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/edit_profile_btn"
+        android:layout_width="119dp"
+        android:layout_height="36dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="251dp"
+        android:layout_marginTop="241dp"
         android:background="#2D929191"
         android:fontFamily="@font/montserrat"
         android:text="EDIT PROFILE" />
 
     <LinearLayout
-        android:layout_width="337dp"
-        android:layout_height="91dp"
+        android:layout_width="362dp"
+        android:layout_height="54dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="327dp"
-        android:background="#FFFFFF"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="322dp"
+        android:background="@drawable/white_background"
+        android:clickable="true"
         android:focusable="auto"
-        android:orientation="horizontal"></LinearLayout>
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/social_demo_icon"
+            android:layout_width="30dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="-2dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="3"
+            app:srcCompat="@drawable/ic_report_icon" />
+
+        <TextView
+            android:id="@+id/socio_demo_title"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="Social-Demographic Information"
+            android:textAlignment="center"
+            android:textColor="#515C6F"
+            android:textSize="15sp" />
+
+        <ImageView
+            android:id="@+id/go_to1"
+            android:layout_width="30dp"
+            android:layout_height="33dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_go_to" />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
