--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 
     <View
         android:id="@+id/white_bg"
-        android:layout_width="413dp"
+        android:layout_width="match_parent"
         android:layout_height="107dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -28,12 +28,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="32dp"
         android:fontFamily="@font/montserrat"
         android:text="TitleofScreen"
         android:textColor="#000000"
         android:textSize="30sp"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="28dp" />
+        app:layout_constraintBottom_toTopOf="@+id/nav_host_fragment"
+        app:layout_constraintEnd_toStartOf="@+id/bell_icon"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/bell_icon"
