--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -7,10 +7,173 @@
     >
 
 
+    <TextView
+        android:id="@+id/text1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="258dp"
+        android:fontFamily="@font/montserrat"
+        android:text="Duration:"
+        android:textColor="#515C6F"
+        android:textSize="20sp" />
+
+    <LinearLayout
+        android:layout_width="362dp"
+        android:layout_height="54dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="322dp"
+        android:background="@drawable/white_background"
+        android:clickable="true"
+        android:focusable="auto"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/radioButton11"
+            android:layout_width="56dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:gravity="center" />
+
+        <TextView
+            android:id="@+id/last2weeks"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="Last two weeks"
+            android:textAlignment="center"
+            android:textColor="#515C6F"
+            android:textSize="15sp" />
+        <TextView
+            android:id="@+id/blankSpace2"
+            android:layout_width="148dp"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text=""
+            android:textColor="#66515C6F"
+            android:textSize="15sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="362dp"
+        android:layout_height="54dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="384dp"
+        android:background="@drawable/white_background"
+        android:clickable="true"
+        android:focusable="auto"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/radioButton22"
+            android:layout_width="56dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:gravity="center" />
+
+        <TextView
+            android:id="@+id/lastMonth"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="Last month"
+            android:textAlignment="center"
+            android:textColor="#515C6F"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/blankSpace"
+            android:layout_width="148dp"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text=""
+            android:textColor="#66515C6F"
+            android:textSize="15sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="362dp"
+        android:layout_height="54dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="451dp"
+        android:background="@drawable/white_background"
+        android:clickable="true"
+        android:focusable="auto"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/radioButton33"
+            android:layout_width="56dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:gravity="center" />
+
+        <TextView
+            android:id="@+id/customDuration"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="Specific period"
+            android:textAlignment="center"
+            android:textColor="#515C6F"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="117dp"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:fontFamily="@font/montserrat"
+            android:text="(start from DD/MM/YYYY end at DD/MM/YYYY)"
+            android:textAlignment="textEnd"
+            android:textColor="#66515C6F"
+            android:textSize="10sp" />
+
+        <ImageView
+            android:id="@+id/go_to3"
+            android:layout_width="30dp"
+            android:layout_height="33dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_go_to" />
+
+    </LinearLayout>
+
     <View
         android:id="@+id/white_bg"
         android:layout_width="match_parent"
-        android:layout_height="186dp"
+        android:layout_height="107dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -18,7 +181,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="-2dp"
         android:layout_marginEnd="0dp"
-        android:layout_marginBottom="639dp"
+        android:layout_marginBottom="604dp"
         android:background="@drawable/white_bg" />
 
     <TextView
@@ -27,35 +190,26 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="142dp"
         android:fontFamily="@font/montserrat"
-        android:text="Report"
+        android:text="Generate Report"
         android:textColor="#000000"
         android:textSize="30sp" />
 
-    <ImageView
-        android:id="@+id/bell_icon"
-        android:layout_width="38dp"
-        android:layout_height="35dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="39dp"
-        android:layout_marginEnd="122dp"
-        app:srcCompat="@drawable/ic_bell_icon" />
-
-    <ImageView
-        android:id="@+id/profile_icon"
-        android:layout_width="54dp"
-        android:layout_height="47dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="27dp"
-        app:srcCompat="@drawable/ic_profile_icon" />
-
-
-
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="204dp"
+        android:layout_height="67dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="92dp"
+        android:layout_marginBottom="64dp"
+        android:background="#4CA1D3"
+        android:ellipsize="none"
+        android:text="Generate report"
+        android:textColor="#FFFFFF" />
 
 
 </RelativeLayout>
