--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -198,7 +198,7 @@
         android:textSize="30sp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/generate_report_btn"
         android:layout_width="204dp"
         android:layout_height="66dp"
         android:layout_alignParentStart="true"
