--- a/app/src/main/res/layout/fragment_drafts.xml
+++ b/app/src/main/res/layout/fragment_drafts.xml
@@ -22,7 +22,18 @@
         android:textColor="#000000"
         android:textSize="30sp" />
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/TabLayoutDraft"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/titleofscreen"
+        />
 
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/ViewPagerDraft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/TabLayoutDraft"/>
 
 
 
