--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/radioButton1"
                 android:layout_width="362dp"
                 android:layout_height="54dp"
-                android:text="Last Weeks"
+                android:text="Last Two Weeks"
                 android:layout_marginStart="22dp"
                 android:layout_marginTop="20dp"
                 android:layout_alignParentStart="true"
@@ -95,6 +95,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_below="@+id/radio_group"
+        android:layout_marginStart="30dp"
         tools:ignore="UnknownId">
 
         <LinearLayout
@@ -156,12 +157,11 @@
     <Button
         android:id="@+id/generate_report_btn"
         android:layout_width="204dp"
-        android:layout_height="66dp"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="92dp"
-        android:layout_marginBottom="64dp"
+        android:layout_below="@id/data_picker"
         android:background="#4CA1D3"
         android:ellipsize="none"
         android:text="Generate report"
