--- a/app/src/main/res/layout/editprofile.xml
+++ b/app/src/main/res/layout/editprofile.xml
@@ -3,10 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#F3F3F3"
     tools:context=".Controller.Homepage.Patient.Editprofile">
 
+    <View
+        android:id="@+id/white_bg1"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="575dp"
+        android:background="@drawable/white_bg" />
 
 
     <TextView
@@ -83,7 +93,7 @@
 
      </LinearLayout>
 
-    <LinearLayout
+ <!--   <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="70dp">
@@ -116,12 +126,12 @@
             android:textColor="#B1B0B0"></EditText>
 
 
-    </LinearLayout>
+    </LinearLayout> -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="70dp">
+        android:layout_marginTop="-20dp">
 
         <TextView
             android:id="@+id/oldText"
@@ -154,21 +164,102 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="80dp">
+
+        <TextView
+            android:id="@+id/newText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="380dp"
+            android:fontFamily="@font/montserrat"
+            android:text="New password"
+            android:textColor="#817889"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+        <EditText
+            android:id="@+id/newPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="430dp"
+            android:layout_marginLeft="-110dp"
+            android:ems="12"
+            android:hint="*****"
+            android:inputType="textPersonName"
+            android:textColor="#B1B0B0"></EditText>
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="170dp">
+
+        <TextView
+            android:id="@+id/reNewText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="380dp"
+            android:fontFamily="@font/montserrat"
+            android:text="Retype New password"
+            android:textColor="#817889"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+        <EditText
+            android:id="@+id/reNewPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="430dp"
+            android:layout_marginLeft="-177dp"
+            android:ems="12"
+            android:hint="*****"
+            android:inputType="textPersonName"
+            android:textColor="#B1B0B0"></EditText>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+       >
     <Button
         android:id="@+id/save"
         android:layout_width="98dp"
         android:layout_height="35dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginStart="151dp"
         android:layout_marginBottom="50dp"
         android:background="#4CA1D3"
         android:ellipsize="none"
         android:text="Save"
         android:textColor="#FFFFFF"
-        android:layout_marginTop="570dp"/>
+        android:layout_marginTop="120dp"
+        android:layout_marginLeft="75dp"/>
+
+        <TextView
+            android:id="@+id/delete"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="70dp"
+            android:fontFamily="@font/montserrat"
+            android:text="Delete Account"
+            android:textColor="#E14E67"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginRight="150dp"/>
     </LinearLayout>
 
 </RelativeLayout>
