--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -225,13 +225,13 @@
         android:id="@+id/log_out_btn"
         android:layout_width="119dp"
         android:layout_height="36dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="600dp"
+
+        android:layout_marginTop="260dp"
         android:background="#E14E67"
         android:textColor="#ffffff"
         android:fontFamily="@font/montserrat"
-        android:text="Log out" />
+        android:text="Log out"
+        android:layout_marginLeft="20dp"/>
 
     <LinearLayout
         android:layout_width="362dp"
@@ -281,10 +281,4 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id = "@+id/layout"
-        android:layout_width = "fill_parent"
-        android:layout_height = "wrap_content"
-        android:orientation = "vertical">
-    </LinearLayout>
 </RelativeLayout>
